@@ -1,4 +1,4 @@
-# This file is generated by Dist::Zilla::Plugin::SyncCPANfile v0.01
+# This file is generated by Dist::Zilla::Plugin::SyncCPANfile v0.02
 # Do not edit this file directly. To change prereqs, edit the `dist.ini` file.
 
 requires "File::Basename" => "0";
@@ -8,7 +8,7 @@ requires "LWP::Simple" => "0";
 requires "MIME::Base64" => "0";
 requires "Moo" => "2";
 requires "MooX::HandlesVia" => "0.001";
-requires "OTRS::OPM::Validate" => "0.01";
+requires "OPM::Validate" => "v1.0.0";
 requires "Path::Class" => "0";
 requires "Try::Tiny" => "0";
 requires "Type::Library" => "1";
@@ -16,7 +16,7 @@ requires "Type::Tiny" => "1";
 requires "Type::Utils" => "1";
 requires "Types::Standard" => "1";
 requires "XML::LibXML" => "0";
-requires "perl" => "5.020";
+requires "perl" => "5.024";
 
 on 'test' => sub {
     requires "Test::More" => "0";
@@ -32,6 +32,10 @@ on 'configure' => sub {
 
 on 'develop' => sub {
     requires "Pod::Coverage::TrustPod" => "0";
+    requires "Test::BOM" => "0";
+    requires "Test::More" => "0.88";
+    requires "Test::NoTabs" => "0";
+    requires "Test::Perl::Critic" => "0";
     requires "Test::Pod" => "1.41";
     requires "Test::Pod::Coverage" => "1.08";
 };
