@@ -1,63 +1,18 @@
-name    = OTRS-OPM-Parser
+name    = OPM-Parser
 author  = Renee Baecker <reneeb@cpan.org>
 license = Artistic_2_0
 copyright_holder = Renee Baecker
 copyright_year   = 2016
 
-version = 1.05
+version = 1.06
 
-[Git::Contributors]
-include_authors = 1
-
-[PkgVersion]
-[PodWeaver]
-
-[PodCoverageTests]
-[PodSyntaxTests]
-
-[CheckChangeLog]
-
-[@Filter]
--bundle = @Basic
--remove = Readme
-
-[@Git]
-[MetaJSON]
-
-[SyncCPANfile]
-
-[MetaProvides::Package]
-
-[ReadmeAnyFromPod / MarkdownInRoot]
-phase = build
-
-[ReadmeAnyFromPod / TextInBuild]
-phase = build
-
-[GitHubREADME::Badge]
-badges = travis
-badges = cpants
-badges = issues
-phase = build
-place = top
-
-[ReadmeAddDevInfo]
-phase = build
-before = # AUTHOR
-add_contribution_file = 1
-
-[ContributorsFile]
-filename = CONTRIBUTORS
-
+[@PERLSRVDE]
+repository_type = github
+repository_path = perlservices/OPM-Parser
+is_cpan = 1
 
 [ExecDir]
 
-[MetaResources]
-homepage = http://github.com/reneeb/OTRS-OPM-Parser
-bugtracker.web = http://github.com/reneeb/OTRS-OPM-Parser/issues
-repository.url = http://github.com/reneeb/OTRS-OPM-Parser.git
-repository.web = http://github.com/reneeb/OTRS-OPM-Parser
-repository.type = git
 
 [Prereqs]
 File::Basename = 0
@@ -74,8 +29,8 @@ Types::Standard = 1
 Path::Class = 0
 Try::Tiny = 0
 XML::LibXML = 0
-OTRS::OPM::Validate = 0.01
-perl = 5.020
+OPM::Validate = 1.0.0
+perl = 5.024
 
 [Prereqs / TestRequires]
 Test::More = 0
