@@ -5,15 +5,15 @@ use warnings;
 
 use Test::More;
 
-use OTRS::OPM::Parser;
+use OPM::Parser;
 
 use File::Basename;
 use File::Spec;
 
 my $opm_file = File::Spec->catfile( dirname(__FILE__), 'data', 'QuickMergeInvalid-3.3.2.opm' );
-my $opm      = OTRS::OPM::Parser->new( opm_file => $opm_file );
+my $opm      = OPM::Parser->new( opm_file => $opm_file );
 
-isa_ok $opm, 'OTRS::OPM::Parser';
+isa_ok $opm, 'OPM::Parser';
 
 $opm->parse;
 
