@@ -5,16 +5,16 @@ use warnings;
 
 use Test::More;
 
-use OTRS::OPM::Parser;
+use OPM::Parser;
 
 use File::Basename;
 use File::Spec;
 
 {
     my $opm_file = File::Spec->catfile( dirname(__FILE__), 'data', 'NotThere-3.3.2.opm' );
-    my $opm      = OTRS::OPM::Parser->new( opm_file => $opm_file );
+    my $opm      = OPM::Parser->new( opm_file => $opm_file );
 
-    isa_ok $opm, 'OTRS::OPM::Parser';
+    isa_ok $opm, 'OPM::Parser';
 
     my $success = $opm->parse;
 
@@ -25,9 +25,9 @@ use File::Spec;
 
 {
     my $opm_file = File::Spec->catfile( dirname(__FILE__), 'data', 'QuickMergeTwoDocs-3.3.2.opm' );
-    my $opm      = OTRS::OPM::Parser->new( opm_file => $opm_file );
+    my $opm      = OPM::Parser->new( opm_file => $opm_file );
 
-    isa_ok $opm, 'OTRS::OPM::Parser';
+    isa_ok $opm, 'OPM::Parser';
 
     my $success = $opm->parse;
 
@@ -40,9 +40,9 @@ use File::Spec;
 
 {
     my $opm_file = File::Spec->catfile( dirname(__FILE__), 'data', 'QuickMerge-4.0.3.opm' );
-    my $opm      = OTRS::OPM::Parser->new( opm_file => $opm_file );
+    my $opm      = OPM::Parser->new( opm_file => $opm_file );
 
-    isa_ok $opm, 'OTRS::OPM::Parser';
+    isa_ok $opm, 'OPM::Parser';
 
     my $success = $opm->parse;
     ok $success;
